# docker-examples-vast

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md
source/SeasideTrafficLights/: .gitignore  prepareHostForSwarm.sh
source/SeasideTrafficLights/Raspberry/: debian_slim_Dockerfile  docker-compose.yml
source/SeasideTrafficLights/Raspberry/app/: seasideTrafficLight-unix.ini  seasideTrafficLight.sh  seasideTrafficLightAlpine.sh
source/SeasideTrafficLights/Raspberry/experiments/: alpine-raspbian_Dockerfile
source/SeasideTrafficLights/Raspberry/vast92/license/: REDIST.TXT
source/SeasideTrafficLights/Raspberry/vast92/newimage/: abtnx.ini
source/SeasideTrafficLights/Raspberry/vast92/nls/: abtaee40.mpr  abtame40.mpr  abtdle40.mpr  abtmge40.mpr  abtnts.cat  abtpwui.cat  abtrie40.mpr  abtthe40.mpr  abttue40.mpr  abtwte40.mpr  cfs.cat  cfswin.cat  cwcspmw.cat  cwexe.cat  cwits.cat  eae.cat  emdses.cat  emexb.cat  emgses.cat  esb.cat  esf.cat  esl.cat  esx.cat  ewexm.cat  ewexo.cat  ewexp.cat  ewi.cat  ewitse.cat  ewitsg.cat  ewitsj.cat  nlsits.cat  oleex.cat  sstg.cat
source/SeasideTrafficLights/Raspberry/vast92/webconn/: abtwjs45.js  abtwsi.pro  server.txt
source/SeasideTrafficLights/Raspberry/vast92/webconn/linux/: abtwsi.mak
source/SeasideTrafficLights/Raspberry/vast92/webconn/source/: abtwsan.c  abtwstbs.h
source/SeasideTrafficLights/Raspberry/vast92/xml/: sstsoenc12.map  sstsoenv12.map  sstwsadm.xml
source/SeasideTrafficLights/Raspberry64/: alpine-raspbian_Dockerfile  debian_slim_Dockerfile  docker-compose.yml  startSwarm.sh  stopSwarm.sh
source/SeasideTrafficLights/Raspberry64/app/: seasideTrafficLight-unix.icx  seasideTrafficLight.sh
source/SeasideTrafficLights/Raspberry64/vast92/: LICENSE.md
source/SeasideTrafficLights/Raspberry64/vast92/newimage/: abtnx
source/SeasideTrafficLights/Raspberry64/vast92/nls/: abtabe40.mpr  abtaoe40.mpr  abtbae40.mpr  abtbta.cat  abtcae40.mpr  abtcbe40.mpr  abtcce40.mpr  abtcee40.mpr  abtcpe40.mpr  abtcwe40.mpr  abtdbe40.mpr  abtdoe40.mpr  abtdpe40.mpr  abtdqe40.mpr  abtede40.mpr  abtefe40.mpr  abteie40.mpr  abtese40.mpr  abtmde40.mpr  abtmre50.mpr  abtmse50.mpr  abtmte50.mpr  abtmve50.mpr  abtnme40.mpr  abtnpe40.mpr  abtole40.mpr  abtpbe40.mpr  abtpre40.mpr  abtpse40.mpr  abtrce40.mpr  abtrde40.mpr  abtree40.mpr  abtrse40.mpr  abtrules.heb  abtrules.nls  abtrules.us  abtsse40.mpr  abtta.cat  abttbe40.mpr  abtvee40.mpr  (+83 more)
source/SeasideTrafficLights/Raspberry64/vast92/readme/: readme.htm
source/SeasideTrafficLights/Raspberry64/vast92/webconn/: CMakeLists.txt  abtwsi.cnf  abtwsi.war
source/SeasideTrafficLights/Raspberry64/vast92/webconn/aix/: abtwsac  abtwsc.exp  abtwsi.mak
source/SeasideTrafficLights/Raspberry64/vast92/webconn/source/: abtwsai.c  abtwsam.c  abtwstt.c
source/SeasideTrafficLights/Raspberry64/vast92/webconn/sun/: abtwsi.mak
source/SeasideTrafficLights/Raspberry64/vast92/webconn/win/: abtwsam.def  abtwsc.def  abtwsi.mak  abtwstt.def
source/SeasideTrafficLights/Raspberry64/vast92/xml/: abtcldef.dtd  abtschem.map  abtvast.map  abtxmap.dtd  customer.map  sstaxis.map  sstaxis.xsd  sstsoenv.map  sstsoenv.xsd  sstwsadm.wsd  sstwsdep.xsd  sstwsdl.map
source/SeasideTrafficLights/aarch64/: README.md  ballena-rpi-raspbian_Dockerfile  debian_Dockerfile  docker-compose.yml  ubuntu_Dockerfile
source/SeasideTrafficLights/aarch64/vast92/license/: license.en
source/SeasideTrafficLights/aarch64/vast92/newimage/: abtnx.ini  nodialog
source/SeasideTrafficLights/aarch64/vast92/nls/: abtcme40.mpr  abtcse40.mpr  abtcte40.mpr  abtcxe40.mpr  abtdce40.mpr  abtdde40.mpr  abtdhe40.mpr  abtdme40.mpr  abtdre40.mpr  abtdue40.mpr  abtere40.mpr  abtis.cat  abtmce40.mpr  abtmee50.mpr  abtpke40.mpr  abtrpe40.mpr  abtrre40.mpr  abtrules.all  abtrules.dbc  abtrwe40.mpr  abtsqe40.mpr  abtwbe40.mpr  abtwhe40.mpr  abtwiz.cat  abtwpe40.mpr  abtwse40.mpr  abtwve40.mpr  autoimp.cat  cg_x.cat  cga.cat  coexspmw.cat  coits.cat  cpswin.cat  cwexd.cat  dbg.cat  dbga.cat  ddeex.cat  ddeexa.cat  ddeits.cat  dmatsa.cat  (+20 more)
source/SeasideTrafficLights/aarch64/vast92/webconn/: abtwsi.htm
source/SeasideTrafficLights/aarch64/vast92/webconn/linux/: abtwsac
source/SeasideTrafficLights/aarch64/vast92/webconn/source/: abtwsac.c  abtwsc.c  abtwscos.c  abtwscos.h  abtwsi.h  abtwstbs.c
source/SeasideTrafficLights/aarch64/vast92/webconn/sun/: abtwsac
source/SeasideTrafficLights/aarch64/vast92/xml/: sstsoenc.map  sstsoenc.xsd  sstwsadi.wsd  sstwsdep.map  sstwsdl.xsd  sstwsdlsoap12.map  sstwsdlsoap12.xsd
source/SeasideTrafficLights/aarch64/vast92/zoneinfo/: version.txt
